global exception added to handle flight